- FEATURE: wakeup to locked screen, unlock by PEKshort
- FEATURE: system event subsystem
- FEATURE: when display always on - and inactivity conditions are true, set to default screen and lock ui
- FEATURE: when display always on - detect if watch are off hand (and no moving e.g. on table) - goes sleep to prevent energy consumption when not on hand

cyberWatch 0.3
========================
- FEATURE: system ticker + do some operations only every Xth tick (battery savings)
- REFACTORING: rename System to Core package and create Hardware subpackage
- BUGIFX: milliseconds instead of microseconds in sleep method

cyberWatch 0.2
========================
 - FEATURE: partially support for TTGO Watch V2 (motor operation only if LILYGO_WATCH_HAS_MOTOR)
 - FEATURE: synchronize date & time with computer during compile/upload
 - FEATURE: screen for settings (with touch control - on/off display on, on/off tilt activation, on/off vibrations)
 - REFACTORING: settings class for alwaysOn feature (instead alwaysOn boolean on DateTime component)
 - REDESIGN: remove turning on "display always on" by PEKShort on date now controlling from PanelSettings app
 - BUGFIX: avoid blinking when swipe to stopwatch screen

cyberWatch 0.1
========================
 - shows splashscreen
 - shows "exit screen"
 - shows current time & date (include day of week)
 - or multiple other watch faces
 - shows battery capacity (with battery icon "progressbar")
 - activate by touching display
 - activate by shortpress pek
 - activate by tilt up maneuver
 - warn on baterry low/very low (vibrate / double vibrate), turn on display and render battery icon with red color
 - show charging state (plug icon)
 - turn off display and cpu goes light sleep on inactivity (battery savings) - wake up by display touch
 - allows "display always on" functionality
 - use CPU light sleep  200ms during main loop (energy saving)
 - cpu frequency set to 40MHz (energy saving)
 - wakeup (and vibrate) on USB / power connect / disconnect