@@ -5,6 +5,7 @@ cyberWatch 0.4
 - FEATURE: system event subsystem
 - FEATURE: when display always on - and inactivity conditions are true, set to default screen and lock ui
 - FEATURE: when display always on - detect if watch are off hand (and no moving e.g. on table) - goes sleep to prevent energy consumption when not on hand
+- FEATURE: "abut screen" with version, commit hash and date and time of compilation
 
 cyberWatch 0.3
 ========================
